--- a/css/style.css
+++ b/css/style.css
@@ -68,9 +68,10 @@ div{
 }
 
 footer p{
+    font-size: unset;
     text-align: right;
     padding-bottom: 10px;
     padding-right: 10px;
-    padding-top: 0px;
+    padding-top: unset;
 }
 
